# glfk

./: CMakeLists.txt  LICENSE.md  Makefile  README.md  VisualStudio.bat
examples/: CMakeLists.txt  Makefile
examples/hello/: CMakeLists.txt  Makefile  main.cpp
examples/hello_fbo/: CMakeLists.txt  main.cpp
examples/hello_shaders/: CMakeLists.txt  main.cpp
src/core/: Buffer.cpp  Buffer.h  Enums.h  Framebuffer.cpp  Framebuffer.h  Renderbuffer.cpp  Renderbuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Shaders.cpp  Shaders.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  VertexArray.cpp  VertexArray.h
src/extra/: Model.cpp  Model.h  Shaders.cpp  Shaders.h  Window.h  WindowGLFW.cpp
tools/: extract_gl_enums.rb  process_code.rb
